tests/A2/reject/badFuncCall2.ul
void main(){
    int x;
    int y;

    foo(x, y);
}